# gql

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-build.yml
include/gql/: error.h  error_codes.h  gql_export.h  rewrite.h
include/gql/ast/nodes/: common.h  expression.h  path_patterns.h  statements.h
include/gql/ast/print/: common.h  output_stream.h  path_patterns.h  statements.h
include/gql/standard/: features.h
include/gql/syntax_analyzer/: ast_node_base.h  aux_data.h  defs.h  syntax_analyzer.h
src/: CMakeLists.txt
src/ast/: CMakeLists.txt  input_positions_test.cpp  input_positions_test.h  output_stream.cpp
src/common/: CMakeLists.txt  error.cpp  formatted_error.h
src/parser/: CMakeLists.txt  ast_builder.cpp  parser.cpp  parser_unittest.cpp
src/rewrite/: CMakeLists.txt  element_pattern_where.cpp  element_patterns.cpp  element_property_predicate.cpp  exists_predicate.cpp  helpers.h  path_pattern_prefix.cpp  rewrite_unittest.cpp  simplified_path_pattern.cpp
src/syntax_analyzer/: CMakeLists.txt  catalog_modifying.cpp  data_modifying.cpp  gql_program.cpp  graph_pattern.cpp  graph_pattern_context.cpp  graph_pattern_context.h  graph_pattern_test.cpp  helpers.h  match.cpp  match_utils.cpp  match_utils.h  path_pattern.cpp  procedure.cpp  query.cpp  reference.cpp  result.cpp  select.cpp  select_test.cpp  syntax_analyzer.cpp  syntax_analyzer.h  syntax_analyzer_file_test.cpp  test_helpers.cpp  test_helpers.h  type_helpers.cpp  type_helpers.h  value_expression.cpp  value_type.cpp
